--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.17.2",
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.15.3",
+    "express-mailer": "^0.3.1",
     "express-session": "^1.15.4",
     "fs-extra": "^4.0.0",
     "moment": "^2.18.1",
